    o by dereine: Move views_test.created field to viewsSqlTest.
    o by dereine: Test views_handler_field_boolean.
    o by dereine: Test views_handler_field_custom.
    o by dereine: Test views_handler_field_date.
    o by dereine: Port views_cache tests from d6.
    o by dereine: Test views_handler_filter_in_operator.
    o by dereine: Test views_handler_field_url.

Views 6.x-3.x-dev
    o #396380 by merlinofchaos, dereine and dagmar: Initial support for GROUP BY queries!!!!!!!!!!!!
    o #535868 by dagmar: Exposed forms as plugins, helping to isolate exposed form code and increase the ability for modules to change the behavior of exposed forms.
    o #670874 by dereine: Argument validator settings were not getting saved.

Views 6.x-3.0-alpha1
  Bug fixes:
    o Table style when not overriding sorts put sorts in wrong order.
    o #488908 by sl27257: "Node: Has new content" only worked when exposed.
    o #451110 by wonder95: Fixed missing word in transform case help text.
    o #385904 by JirkaRybka: Prevent duplication of id edit-submit on views exposed form.
    o #489888 by TheRec: Remove erroneous "alt" attribute from <a> when using link rewriting.
    o #499078 by Darren Oh: Make sure theme is initialized for pre_render hook.
    o #490516 by v_20q: Some fields not properly being marked as translatable due to option unpacking bug.
    o #484222 by dereine: Attachment displays were ignoring access settings.
    o #503098 by Davide Goode: Feed displays should have link displays since they link to a page display.
    o #381346 by ayalon: Allow Taxonomy: Tid as a field, which is now needed for rewrites which may need tids.
    o #485296 by overall and deekayen: Remove unnecessary t() call.
    o #460838 by Darren Oh: Make DISTINCT more distinct.
    o #503774 by dereine: Cache time failed to return the proper cutoff time.
    o #506098: Table sorting with no default was overriding sorts even tho it was not supposed to.