@@ -8,6 +8,7 @@ files[] = views.module
 ; Handlers
 files[] = handlers/views_handler_area.inc
 files[] = handlers/views_handler_area_text.inc
+files[] = handlers/views_handler_area_text.test
 files[] = handlers/views_handler_argument.inc
 files[] = handlers/views_handler_argument_date.inc
 files[] = handlers/views_handler_argument_formula.inc
